src/main/java/top/zhiqian/observer/sample/bad/weather/WeatherDisplay.java
package top.zhiqian.observer.sample.bad.weather;

public interface WeatherDisplay {
    void update(float temperature, float humidity, float pressure);

    String message();
}

